--- a/ControleMedicamentos.csproj
+++ b/ControleMedicamentos.csproj
@@ -24,4 +24,6 @@
 		<Folder Include="src\repositorios\implementacoes\" />
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
